...
                                    <constraint firstAttribute="height" constant="34" id="UUf-ga-BVB"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="22"/>
                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <searchBar tag="1" contentMode="redraw" restorationIdentifier="searcBar" searchBarStyle="minimal" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="U7h-Ba-Q0n">
                                <rect key="frame" x="40" y="108" width="334" height="44"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="cze-jq-9Vg"/>
                                </constraints>
                                <textInputTraits key="textInputTraits"/>
...
                                                            <constraint firstAttribute="height" constant="21" id="xh3-TP-xii"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cantidad:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PrN-KL-laC">
                                                        <rect key="frame" x="8" y="29.5" width="73" height="21"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="21" id="AGu-mA-BVZ"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
                                                        <color key="textColor" systemColor="secondaryLabelColor"/>
...
                                                    <constraint firstAttribute="trailing" secondItem="FIW-By-bpY" secondAttribute="trailing" constant="20" id="ecO-N1-NrO"/>
                                                    <constraint firstItem="PrN-KL-laC" firstAttribute="leading" secondItem="ykW-DG-k6P" secondAttribute="leadingMargin" id="fqH-OH-Y7i"/>
                                                    <constraint firstItem="PrN-KL-laC" firstAttribute="centerY" secondItem="ykW-DG-k6P" secondAttribute="centerY" id="how-z0-f2c"/>
                                                    <constraint firstAttribute="height" constant="80" id="nSX-Ll-bVI"/>
                                                </constraints>
                                            </view>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ubicacion" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="59f-4e-THK">
                                                <rect key="frame" x="50" y="645" width="344" height="21"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="21" id="8RC-N2-ggE"/>
                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="tfq-dO-DF1"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Informacion del vendedor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ck4-sV-y4E">
                                                <rect key="frame" x="20" y="614" width="374" height="21"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="21" id="LLH-Vq-6LQ"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
                                                <nil key="textColor"/>
...
                                                    <constraint firstAttribute="height" constant="21" id="3YE-WW-Fam"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
                                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Caracteristicas" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0GQ-4W-P0k">
                                                <rect key="frame" x="20" y="715" width="374" height="21"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="21" id="GRc-Tu-Isa"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
                                                <nil key="textColor"/>
...
